Mejora acciones administrador
- Ahora solo el administrador puede cargar una categoría.
- Comprobación para que no se intente obtener un objeto mediante su id si no se encuentra en el repositorio correspondiente.